# ecommerce1

./: .graphqlrc.yml  README.md  dc.local-build.yml  docker-compose.yml  ecommerce1.code-workspace  justfile
.github/workflows/: deploy-staging.yml  deploy.yml  destroy-staging.yml  destroy.yml  pr-check-and-build.yml
admin/: elm.json  index.html  init.ts  justfile  package-lock.json  package.json  vite.config.ts
admin/configs/: nginx.on-startup.sh
admin/public/nocache/: config.json
admin/review/src/: ReviewConfig.elm
admin/src/: Effect.elm  MainTest.elm  Shared.elm
admin/src/Components/: ProductEditor.elm
backend/: .dockerignore  Cargo.toml  Dockerfile  index.js  justfile  package-lock.json  package.json
backend/src/: context.rs  env.rs  graphql_api.rs  lib.rs  redis.rs  zitadel.rs
docs/: deployment-cli.md  deployment-github-actions.md  design.md  dev-recipes.md  prerequisites.md  updating-dependencies.md
elm-shared/: .gitignore  elm.json  justfile  package-lock.json  package.json
elm-shared/src/: ApiTypes.elm  ElmSharedStubTest.elm  Oidc.elm  ScalarCodecs.elm
graphql-schema/: schema.gql
terraform/: .gitignore  .terraform.lock.hcl  justfile  main.tf  outputs.tf  variables.tf
uikit/: .gitignore  elm.json  index.html  init.ts  package-lock.json  package.json  vite.config.ts
uikit/review/: elm.json
uikit/src/: Effect.elm  Shared.elm  UiKitStubTest.elm  UiKitUtils.elm
webapp/: .dockerignore  Dockerfile  README.md  elm.json  index.html  init.ts  package-lock.json  package.json  vite.config.ts
webapp/src/: Effect.elm  Shared.elm  View.elm
(+87 files in other folders)
